# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

"""Handlebarrz test targets."""

load("@rules_dart//:defs.bzl", "dart_test")

package(default_visibility = ["//visibility:public"])

# Export test files
exports_files(glob(["**/*.dart"]))

# Unit tests
dart_test(
    name = "handlebars_test",
    main = "handlebars_test.dart",
    package_dir = "dart/handlebarrz",
)

# ANTLR parser tests
dart_test(
    name = "antlr_parser_test",
    main = "antlr_parser_test.dart",
    package_dir = "dart/handlebarrz",
)
