# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

"""Example demonstrating dart_build_runner for freezed code generation."""

load("//:build_runner.bzl", "dart_build_runner")
load("//:defs.bzl", "dart_library", "dart_native_binary", "dart_test")

package(default_visibility = ["//visibility:public"])

# Run build_runner to generate freezed and json_serializable code
dart_build_runner(
    name = "generated",
    srcs = glob(["lib/**/*.dart"]),
)

# Main library with generated code
dart_library(
    name = "models",
    srcs = glob(["lib/**/*.dart"]) + [":generated"],
    pubspec = "pubspec.yaml",
)

# Example binary
dart_native_binary(
    name = "example",
    main = "lib/main.dart",
    deps = [":models"],
)

# Tests
dart_test(
    name = "user_test",
    main = "test/user_test.dart",
    deps = [":models"],
)
