# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_dart//:defs.bzl", "dart_analyze", "dart_aot_snapshot", "dart_binary", "dart_doc", "dart_format_check", "dart_js_binary", "dart_library", "dart_native_binary", "dart_pub_get", "dart_pub_publish", "dart_test", "dart_wasm_binary")

dart_library(
    name = "hello_world",
    srcs = ["lib/hello.dart"],
    pubspec = "pubspec.yaml",
)

dart_binary(
    name = "hello_bin",
    main = "bin/main.dart",
    deps = [":hello_world"],
)

dart_test(
    name = "hello_test",
    main = "test/hello_test.dart",
    deps = [":hello_world"],
)

dart_native_binary(
    name = "hello_native",
    main = "bin/main.dart",
    deps = [":hello_world"],
)

dart_js_binary(
    name = "hello_js",
    main = "bin/main.dart",
    deps = [":hello_world"],
)

dart_wasm_binary(
    name = "hello_wasm",
    main = "bin/main.dart",
    deps = [":hello_world"],
)

dart_aot_snapshot(
    name = "hello_aot",
    main = "bin/main.dart",
    deps = [":hello_world"],
)

dart_doc(
    name = "hello_doc",
    srcs = ["lib/hello.dart"],
)

dart_analyze(
    name = "hello_analyze",
    srcs = glob(["**/*.dart"]),
)

dart_format_check(
    name = "hello_format",
    srcs = glob(["**/*.dart"]),
)

dart_pub_get(
    name = "hello_pub_get",
)

dart_pub_publish(
    name = "hello_release",
)
