module(
    name = "proto_example",
    version = "0.1.0",
)

bazel_dep(name = "rules_dart")
local_path_override(
    module_name = "rules_dart",
    path = "../..",
)

bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3")

dart = use_extension("@rules_dart//:extensions.bzl", "dart")
dart.configure(version = "3.7.0")
use_repo(dart, "dart_sdk")
