# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

module(
    name = "grpc_flutter_example",
    version = "0.1.0",
)

bazel_dep(name = "rules_flutter")
local_path_override(
    module_name = "rules_flutter",
    path = "../..",
)

bazel_dep(name = "platforms", version = "1.0.0")

# Configure Flutter SDK
flutter = use_extension("@rules_flutter//:extensions.bzl", "flutter")
flutter.configure(
    channel = "stable",
    version = "3.27.0",
)
use_repo(flutter, "flutter_sdk")
