# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

"""Dart gRPC server example.

This server provides the backend for the Flutter gRPC client.
"""

package(default_visibility = ["//visibility:public"])

# The server would use dart_binary from rules_dart
# For now, we just have the sources

filegroup(
    name = "server_srcs",
    srcs = glob(["bin/**/*.dart"]),
)

filegroup(
    name = "pubspec",
    srcs = ["pubspec.yaml"],
)
