# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "helpers",
    srcs = [
        "Helpers.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_github_jknack_handlebars",
    ],
)

java_test(
    name = "HelpersTest",
    srcs = ["HelpersTest.java"],
    test_class = "com.google.dotprompt.helpers.HelpersTest",
    deps = [
        ":helpers",
        "@maven//:com_github_jknack_handlebars",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
